Bug 1245545 - Mochitest for plugin unloadTimeoutSecs; r=bsmedberg